@@ -1,3 +1,12 @@
+2008-09-08  Mikael Ottela   <mikael.ottela@ixonos.com>
+
+	* src/tracker-indexer/tracker-indexer-db.c:
+	* src/trackerd/tracker-db.c:
+	* src/libtracker-common/tracker-type-utils.c:
+	* src/libtracker-common/tracker-type-utils.h: Fixed problems with
+	date handling in metadata.
+
+
 2008-09-08  Martyn Russell  <martyn@imendio.com>
 
 	* src/tracker-indexer/tracker-indexer.c: Implemented a cache that
